[package]
name = "lsp-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lsp-types = "0.93.2"
anyhow = "1.0.68"
serde_json = { version = "1.0.91", features = ["raw_value"] }
serde = "1.0.152"
regex = "1.7.1"
normal = { git = "https://github.com/selfint/normal" }
lazy_static = "1.4.0"

