[package]
name = "jsonrpc-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lsp-types = "0.93.2"
anyhow = "1.0.68"
serde_json = { version = "1.0.91", features = ["raw_value"] }
serde = "1.0.152"
regex = "1.7.1"
lazy_static = "1.4.0"
tokio = { version = "1.24.1", features = [
    "rt",
    "macros",
    "sync",
    "time",
    "process",
    "io-util",
] }

[dev-dependencies]
insta = { version = "1.26.0", features = ["json"] }
similar-asserts = "1.4.2"
